chore: add credit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link type="text/css" rel="stylesheet" href="./src/style.css">
   </head>
   <body>
+    <div id="info">henry rech - threejs - regular show</div>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
